@@ -2,5 +2,5 @@
 AC_CHECK_HEADERS([unistd.h])
 
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.12.1)
+AM_GNU_GETTEXT_VERSION(0.13.1)
 AC_CONFIG_FILES([po/Makefile.in])
