@@ -1,6 +1,6 @@
 #!/bin/sh
 # Example for use of GNU gettext.
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Copyright (C) 2003-2004 Free Software Foundation, Inc.
 # This file is in the public domain.
 #
 # Script for cleaning all autogenerated files.
@@ -18,6 +18,7 @@ rm -f m4/gettext.m4
 rm -f m4/glibc21.m4
 rm -f m4/iconv.m4
 rm -f m4/intdiv0.m4
+rm -f m4/intmax.m4
 rm -f m4/inttypes-pri.m4
 rm -f m4/inttypes.m4
 rm -f m4/inttypes_h.m4
@@ -26,12 +27,20 @@ rm -f m4/lcmessage.m4
 rm -f m4/lib-ld.m4
 rm -f m4/lib-link.m4
 rm -f m4/lib-prefix.m4
+rm -f m4/longdouble.m4
+rm -f m4/longlong.m4
 rm -f m4/nls.m4
 rm -f m4/po.m4
+rm -f m4/printf-posix.m4
 rm -f m4/progtest.m4
+rm -f m4/signed.m4
+rm -f m4/size_max.m4
 rm -f m4/stdint_h.m4
 rm -f m4/uintmax_t.m4
 rm -f m4/ulonglong.m4
+rm -f m4/wchar_t.m4
+rm -f m4/wint_t.m4
+rm -f m4/xsize.m4
 rm -f mkinstalldirs
 rm -f po/Makefile.in.in
 rm -f po/remove-potcdate.sin
